--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <html>
   <head>
     <title>Wyatt Rajer</title>
+    <link rel="stylesheet" href="./style.css"/>
   </head>
 
 
   <body>
     <header>
       <nav>
-        <span>Wyatt Rajer</span>
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About</a>
-        <a href="./portfolio.html">Portfolio</a>
+        <span class="name">WYATT RAJER</span>
+        <a class="active" href="./index.html">HOME</a>
+        <a href="./portfolio.html">PORTFOLIO</a>
+        <a href="./about.html">ABOUT</a>
       </nav>
     </header>
     <footer>
-      <span>© Wyatt Rajer 2023</span>
+      <span>© WYATT RAJER 2023</span>
     </footer>
   </body>
 </html>
