it started storming and im scared of losing it

--- a/about.html
+++ b/about.html
@@ -6,16 +6,21 @@
 
 
   <body>
-    <header>
-      <nav>
+    <section class="divider">
+      <header>
         <span class="name">WYATT RAJER</span>
-        <a href="./index.html">HOME</a>
-        <a href="./portfolio.html">PORTFOLIO</a>
-        <a class="active" href="./about.html">ABOUT</a>
-      </nav>
-    </header>
-    <footer>
-      <span>© WYATT RAJER 2023</span>
-    </footer>
+        <nav>
+          <a href="./index.html">HOME</a>
+          <a href="./portfolio.html">PORTFOLIO</a>
+          <a class="active" href="./about.html">ABOUT</a>
+        </nav>
+      </header>
+      <main>
+
+      </main>
+      <footer>
+        <span>© WYATT RAJER 2023</span>
+      </footer>
+    </section>
   </body>
 </html>
