--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
 
 
   <body>
-    <header>
-      <nav>
+    <section class="divider">
+      <header>
         <span class="name">WYATT RAJER</span>
-        <a class="active" href="./index.html">HOME</a>
-        <a href="./portfolio.html">PORTFOLIO</a>
-        <a href="./about.html">ABOUT</a>
-      </nav>
-    </header>
-    <footer>
-      <span>© WYATT RAJER 2023</span>
-    </footer>
+        <nav>
+          <a class="active" href="./index.html">HOME</a>
+          <a href="./portfolio.html">PORTFOLIO</a>
+          <a href="./about.html">ABOUT</a>
+        </nav>
+      </header>
+      <main style="text-align: center;">
+        <h2>Friend, Mentor, Grey Wizard.</h2>
+        <h3>“It is not despair, for despair is 
+          only for those who see the end beyond all doubt. We do not.”</h3>
+      </main>
+      <footer>
+        <span>© WYATT RAJER 2023</span>
+      </footer>
+    </section>
   </body>
 </html>
