--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,31 @@
 
 
   <body>
-    <header>
-      <nav>
+    <section class="divider">
+      <header>
         <span class="name">WYATT RAJER</span>
-        <a href="./index.html">HOME</a>
-        <a class="active" href="./portfolio.html">PORTFOLIO</a>
-        <a href="./about.html">ABOUT</a>
-      </nav>
-    </header>
-    <footer>
-      <span>© WYATT RAJER 2023</span>
-    </footer>
+        <nav>
+          <a href="./index.html">HOME</a>
+          <a class="active" href="./portfolio.html">PORTFOLIO</a>
+          <a href="./about.html">ABOUT</a>
+        </nav>
+      </header>
+      <main>
+        <section class="websites">
+          <h2>Google</h2>
+          <img class="right" alt="picture of google" src="./google.png">
+          <p>Yes, I am the founder and creator of the search engine "Google". 
+            This is actually an undercover-boss type situation. You guys are doing great!</p>
+        </section>
+        <section class="websites">
+          <h2>Apple</h2>
+          <img class="left" alt="picture of Apple.com" src="./apple.png">
+          <p>I also designed and worked on the apple website. They also from time to time tend to ask my about my opinion on their projects. I really nailed it w the ipod</p>
+        </section>
+      </main>
+      <footer>
+        <span>© WYATT RAJER 2023</span>
+      </footer>
+    </section>
   </body>
 </html>
