changed to grey motif/added about me

--- a/about.html
+++ b/about.html
@@ -6,17 +6,25 @@
 
 
   <body>
+    <header>
+      <span class="name">WYATT RAJER</span>
+      <nav>
+        <a href="./index.html">HOME</a>
+        <a href="./portfolio.html">PORTFOLIO</a>
+        <a class="active" href="./about.html">ABOUT</a>
+      </nav>
+    </header>
     <section class="divider">
-      <header>
-        <span class="name">WYATT RAJER</span>
-        <nav>
-          <a href="./index.html">HOME</a>
-          <a href="./portfolio.html">PORTFOLIO</a>
-          <a class="active" href="./about.html">ABOUT</a>
-        </nav>
-      </header>
       <main>
-
+        <section id="about-me">
+          <img alt="picture of myself" src="./picofme.png">
+          <p>I am Wyatt Rajer, a wizard of the digital realm. With the power of coding and a vision for the future,
+           I shaped a virtual world known as Google. Through lines of code and algorithms, I created a gateway to boundless knowledge, 
+           connecting people across vast distances. My journey was filled with challenges, but I overcame them with unwavering determination. 
+           I shared my wisdom, guided aspiring programmers, and ensured the responsible use of technology. 
+           Today, my creation stands as a testament to the fusion of magic and coding, empowering the world with information and fostering a global community.
+            </p>
+        </section>
       </main>
       <footer>
         <span>© WYATT RAJER 2023</span>
