updated formatting/added portfolio item/added css elemnts

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </nav>
     </header>
     <section class="divider">
-      <main style="text-align: center;">
-        <h2>Friend, Mentor, Grey Wizard.</h2>
-        <h3>“It is not despair, for despair is 
-          only for those who see the end beyond all doubt. We do not.”</h3>
+      <main id="home" style="text-align: center;">
+        <h2>Friend, Mentor, Grey Wizard</h2>
+        <h1 style="font-family: cursive; padding-top: 5%;">“It is not despair, for despair is 
+          only for those who see the end beyond all doubt. We do not.”</h1>
       </main>
       <footer>
         <span>© WYATT RAJER 2023</span>
