--- a/portfolio.html
+++ b/portfolio.html
@@ -16,16 +16,21 @@
     </header>
     <section class="divider">
       <main>
-        <section class="websites">
-          <h2>Google</h2>
+        <section class="websites" style="padding-top: 2em;">
           <img class="right" alt="picture of google" src="./google.png">
+          <h2>Google</h2>
           <p>Yes, I am the founder and creator of the search engine "Google". 
             This is actually an undercover-boss type situation. You guys are doing great!</p>
         </section>
         <section class="websites">
-          <h2>Apple</h2>
           <img class="left" alt="picture of Apple.com" src="./apple.png">
+          <h2>Apple</h2>
           <p>I also designed and worked on the apple website. They also from time to time tend to ask my about my opinion on their projects. I really nailed it w the ipod</p>
+        </section>
+        <section class="websites">
+          <img class="right" alt="picture of Bread" src="./bread.webp">
+          <h2>Sliced Bread</h2>
+          <p>Literal sliced bread. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, dolores quod. Voluptas quibusdam, impedit nam natus deserunt perspiciatis labore praesentium, laboriosam architecto, aspernatur excepturi ratione culpa quisquam? Sit, nulla consequatur!</p>
         </section>
       </main>
       <footer>
