updated about me

--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
            I shared my wisdom, guided aspiring programmers, and ensured the responsible use of technology. 
            Today, my creation stands as a testament to the fusion of magic and coding, empowering the world with information and fostering a global community.
             </p>
+            <p style="font-size: small;">*bio written by ChatGPT*
+            </p>
         </section>
       </main>
       <footer>
