--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
   <head>
     <title>Wyatt Rajer</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-
 
   <body>
     <header>
@@ -15,10 +14,12 @@
       </nav>
     </header>
     <section class="divider">
-      <main id="home" style="text-align: center;">
+      <main id="home" style="text-align: center">
         <h2>Friend, Mentor, Grey Wizard</h2>
-        <h1 style="font-family: cursive; padding-top: 5%;">“It is not despair, for despair is 
-          only for those who see the end beyond all doubt. We do not.”</h1>
+        <h1 style="font-family: cursive; padding-top: 5%">
+          “It is not despair, for despair is only for those who see the end
+          beyond all doubt. We do not.”
+        </h1>
       </main>
       <footer>
         <span>© WYATT RAJER 2023</span>
