Added contact form - Updated NAV w links

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,13 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <span class="name">WYATT RAJER</span>
+      <nav>
+        <a href="./index.html">HOME</a>
+        <a href="./portfolio.html">PORTFOLIO</a>
+        <a href="./about.html">ABOUT</a>
+        <a class="active" href="./contact.html">CONTACT ME</a>
+      </nav>
     <section class="contactForm">
       <h1>Contact Me</h1>
       <form>
