--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         <a href="./index.html">HOME</a>
         <a href="./portfolio.html">PORTFOLIO</a>
         <a class="active" href="./about.html">ABOUT</a>
+        <a href="./contact.html">CONTACT ME</a>
       </nav>
     </header>
     <section class="divider">
