--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <a class="active" href="./index.html">HOME</a>
         <a href="./portfolio.html">PORTFOLIO</a>
         <a href="./about.html">ABOUT</a>
+        <a href="./contact.html">CONTACT ME</a>
       </nav>
     </header>
     <section class="divider">
