reorganized file structure

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <section class="divider">
       <main>
         <section id="about-me">
-          <img alt="picture of myself" src="./picofme.png">
+          <img alt="picture of myself" src="./images/picofme.png">
           <p>I am Wyatt Rajer, a wizard of the digital realm. With the power of coding and a vision for the future,
            I shaped a virtual world known as Google. Through lines of code and algorithms, I created a gateway to boundless knowledge, 
            connecting people across vast distances. My journey was filled with challenges, but I overcame them with unwavering determination. 
