Nav bar changes / Code clean up

--- a/about.html
+++ b/about.html
@@ -1,21 +1,28 @@
 <html>
   <head>
     <title>Wyatt Rajer</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
-
 
   <body>
     <header>
-      <span class="name">WYATT RAJER</span>
-      <nav>
-        <a href="./index.html">HOME</a>
-        <a href="./portfolio.html">PORTFOLIO</a>
-        <a class="active" href="./about.html">ABOUT</a>
-        <a href="./contact.html">CONTACT ME</a>
-      </nav>
+      <div id="navBar">
+        <nav>
+          <a href="./index.html">HOME</a>
+        </nav>
+        <nav>
+          <a href="./portfolio.html">PORTFOLIO</a>
+        </nav>
+        <span class="name">WYATT<br />RAJER</span>
+        <nav>
+          <a class="active" href="./about.html">ABOUT</a>
+        </nav>
+        <nav>
+          <a href="./contact.html">CONTACT ME</a>
+        </nav>
+      </div>
     </header>
-    <section class="divider">
       <main>
         <section id="about-me">
           <img alt="picture of myself" src="./images/picofme.png">
@@ -32,6 +39,5 @@
       <footer>
         <span>© WYATT RAJER 2023</span>
       </footer>
-    </section>
   </body>
 </html>
