--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,28 @@
 <html>
   <head>
-    <title>Contact Form</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Wyatt Rajer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
+
   <body>
-    <span class="name">WYATT RAJER</span>
-      <nav>
-        <a href="./index.html">HOME</a>
-        <a href="./portfolio.html">PORTFOLIO</a>
-        <a href="./about.html">ABOUT</a>
-        <a class="active" href="./contact.html">CONTACT ME</a>
-      </nav>
+    <header>
+      <div id="navBar">
+        <nav>
+          <a href="./index.html">HOME</a>
+        </nav>
+        <nav>
+          <a href="./portfolio.html">PORTFOLIO</a>
+        </nav>
+        <span class="name">WYATT<br />RAJER</span>
+        <nav>
+          <a href="./about.html">ABOUT</a>
+        </nav>
+        <nav>
+          <a class="active" href="./contact.html">CONTACT ME</a>
+        </nav>
+      </div>
+    </header>
     <section class="contactForm">
       <h1>Contact Me</h1>
       <form>
