--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <html>
   <head>
     <title>Wyatt Rajer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
     <header>
-      <span class="name">WYATT RAJER</span>
-      <nav>
-        <a class="active" href="./index.html">HOME</a>
-        <a href="./portfolio.html">PORTFOLIO</a>
-        <a href="./about.html">ABOUT</a>
-        <a href="./contact.html">CONTACT ME</a>
-      </nav>
+      <div id="navBar">
+        <nav>
+          <a class="active" href="./index.html">HOME</a>
+        </nav>
+        <nav>
+          <a href="./portfolio.html">PORTFOLIO</a>
+        </nav>
+        <span class="name">WYATT<br />RAJER</span>
+        <nav>
+          <a href="./about.html">ABOUT</a>
+        </nav>
+        <nav>
+          <a href="./contact.html">CONTACT ME</a>
+        </nav>
+      </div>
     </header>
-    <section class="divider">
-      <main id="home" style="text-align: center">
+    <main>
+      <section id="home">
         <h2>Friend, Mentor, Grey Wizard</h2>
         <h1 style="font-family: cursive; padding-top: 5%">
           “It is not despair, for despair is only for those who see the end
           beyond all doubt. We do not.”
         </h1>
-      </main>
-      <footer>
-        <span>© WYATT RAJER 2023</span>
-      </footer>
-    </section>
+      </section>
+    </main>
+    <footer>
+      <span>© WYATT RAJER 2023</span>
+    </footer>
   </body>
 </html>
